1) Changed from @Data to getter setter 2) Properties moved to root POM